--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -1,28 +1,26 @@
-.filterRow{
+.filterRow {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-
 }
 
 .data-table {
     border-collapse: collapse;
-  }
-  
+}
+
 .data-table thead th {
     background-color: #f5f5f5;
 }
 
-.icons-handle{
+.icons-handle {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 15px;
-    /* width: 100%; */
 }
 
-.date{
+.date {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,29 +28,21 @@
     gap: 10px;
     margin-bottom: 10px;
 }
-  
-/* .data-table tbody tr:hover {
-    background-color: #f5f5f5;
-    cursor: pointer;
-}
-  
-.data-table tbody tr:nth-child(even) {
-    background-color: #f8f8f8;
-} */
 
-.containerBtn{
+.containerBtn {
     display: flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     margin-bottom: 20px;
     width: 100%;
     margin-left: 20px;
 }
-.mobileBtn{
+
+.mobileBtn {
     display: none !important;
 }
 
-.iconBtnBox{
+.iconBtnBox {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,56 +50,56 @@
     padding: 10px;
     border: 2px solid white;
     border-radius: 8px;
-    
-
 }
 
-.iconActive{
-    background-color: white;
+.iconActive {
+    background-color: rgb(60, 25, 216);
     color: black;
 }
-.iconDeactive{
+
+.iconDeactive {
     background-color: rgb(78, 74, 78);
     color: black;
 }
 
+/* Fixing Media Query Issues */
 @media only screen and (max-width: 600px) {
     .filterRow {
         padding: 0px !important;
         margin-top: 0px !important;
         display: flex;
-        gap: "5px";
-        
+        gap: 5px;
     }
-    .addNew{
-        /* padding-top: 20px; */
+
+    .addNew {
         display: none !important;
     }
-    .mobileBtn{
+
+    .mobileBtn {
         display: inline-block !important;
     }
-    .iconBtnBox{
+
+    .iconBtnBox {
         display: flex;
         align-items: center;
         justify-content: center;
         border: 0px;
-        
     }
-    
-    .date{
-        /* padding: 10px; */
+
+    .date {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: "10px";
+        gap: 10px;
         flex-direction: column;
         margin-bottom: 10px;
     }
-    .date .form-group{
+
+    .date .form-group {
         width: 45%;
     }
 
-    .containerBtn{
+    .containerBtn {
         margin-left: 0px !important;
     }
 }
